# gold_macro

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  RUNBOOK.md  demo.py  demo_live.py  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: config.py
app/alerting/: __init__.py  dispatcher.py  sinks.py
app/api/: main.py
app/backtest/: __init__.py  calibrate.py  metrics.py  replay.py
app/core/: config.py  detector.py  engine.py  models.py  orchestrator.py  stats.py
app/integrations/: __init__.py  tradingview.py
app/scheduler/: __init__.py  __main__.py  runner.py
app/sentiment/: cost.py  engine.py  models.py  positioning.py  textual.py
app/sources/: base.py  calendar.py  cot.py  fred.py  mock.py  news.py  positioning.py  price.py  real.py
app/storage/: __init__.py  base.py  sqlite.py
app/web/: dashboard.html
pine/: COMBO_BACKTEST.md  MOMENTUM_BACKTEST.md  SILVER_RETAIL_RESEARCH.md  SMC_ICT_BACKTEST.md  gold_macro_feed.pine  momentum_xau.pine  smc_ict_ultimate.pine
results/: CALIBRATION_REPORT.md
scripts/: backtest_combo.py  backtest_momentum.py  backtest_smc_ict.py  build_backtest_data.py  research_gold_silver.py  run_backtest_report.py
tests/: conftest.py  test_config.py
tests/alerting/: test_dispatcher.py  test_sinks.py
tests/api/: test_endpoints.py
tests/backtest/: test_calibrate.py  test_metrics.py  test_replay.py
tests/core/: test_detector.py  test_engine.py  test_stats.py
tests/integrations/: test_tradingview.py
tests/scheduler/: test_runner.py
(+14 files in other folders)
